Assignment 1/testcases/negative/T9.java
class T1 {
  public static void main (String[] a) {
    System.out.println(0) // Error: missing semicolon
  }
}
